--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,30 @@
+aiosmtplib==2.0.2
 annotated-types==0.7.0
 anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+babel==2.16.0
 bcrypt==4.2.0
+blinker==1.8.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 dnspython==2.7.0
+email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.4
+fastapi-mail==1.4.1
 h11==0.14.0
 idna==3.10
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+minio==7.2.10
+pip-system-certs==4.0
+pycparser==2.22
+pycryptodome==3.21.0
 pydantic==2.9.2
+pydantic-settings==2.6.1
 pydantic_core==2.23.4
 PyJWT==2.9.0
 pymongo==4.10.1
@@ -24,3 +39,4 @@ starlette==0.41.2
 typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.32.0
+wrapt==1.16.0
