--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+colorama==0.4.6
 dnspython==2.7.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
