--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,13 @@ RELOAD=False
 TZ=Asia/Jakarta
 WORKERS=1
 
+########## AUTH ##########
 JWT_SECRET_KEY=kopisusujahe
 TOKEN_EXPIRES_HOURS=10
 REFRESH_TOKEN_EXPIRES_HOURS=30
 OTP_EXPIRES_SECONDS=600
+
+########## SEED ##########
 INITIAL_CUSTOMER_USER_USERNAME=initial_customer
 INITIAL_CUSTOMER_USER_PASSWORD=test123
 INITIAL_SELLER_USER_USERNAME=initial_seller
@@ -17,16 +20,25 @@ INITIAL_SELLER_USER_PASSWORD=test123
 INITIAL_ADMIN_USER_USERNAME=initial_admin
 INITIAL_ADMIN_USER_PASSWORD=test123
 
+########## MONGODB ##########
 MONGODB_URI=mongodb://root:root@ecommerce_mongodb:27017
 MONGODB_NAME=quickmart
+
+########## MINIO ##########
 MINIO_ENDPOINT=ecommerce_minio:9000
 # compose
 MINIO_ACCESS_KEY=indomiegorengoriginal
 # compose
 MINIO_SECRET_KEY=indomiegorengoriginal
 MINIO_SECURE=False
+
+########## GMAIL ##########
 GMAIL_SENDER_EMAIL=
 GMAIL_SENDER_PASSWORD=
+
+########## OAUTH2 ##########
+GOOGLE_OAUTH2_WEB_CLIENT_ID=
+GOOGLE_OAUTH2_WEB_CLIENT_SECRET=
 
 ############# compose #############
 MONGODB_PORT=27017
